--- a/landscape_character_assesment.ipynb
+++ b/landscape_character_assesment.ipynb
@@ -33,6 +33,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I tried authenticating earth engine in a jupyter notebook (in this environment), but the verification box wouldn't appear to paste the code in.\n",
+    "Had to try the authentication in a different IDE which worked. The authentication code is in a python file name (pp.py) in this directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -84,9 +106,6 @@
     }
    ],
    "source": [
-    "# I tried authenticating earth engine in a jupyter notebook(in this environment), but the verification box wouldn't appear to paste the code in\n",
-    "# Had to try the authentication in a different IDE which worked. The authentication happened in a python file name (pp.py) in this folder\n",
-    "\n",
     "ee.Initialize(project = 'ee-reginadowlings')"
    ]
   },
