--- a/landscape_character_assessment/landscape_character_assesment.ipynb
+++ b/landscape_character_assessment/landscape_character_assesment.ipynb
@@ -4,11 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ths project involves a detailed landscape character analysis of Ghana, and it focuses on the biophysical attributes.\n",
-    "This includes an analysis and assessment of precipitation-evaporation index, Land Cover, Proximity to Water Bodies and CO2 Emissions.\n",
+    "Ths project involves a detailed landscape character analysis of Ghana, with focus on the biophysical attributes.\n",
+    "This includes an analysis and assessment of precipitation-Evapotranspiration index and Land Cover datasets.\n",
     "The timeframe for which data would be obtained is from (2021-01-01) to (2022- 01 - 01). Over a span of one year\n",
     "Raster data for analysis and visualization would be otained from Google's Earth Engine via the python earth engine library\n",
-    "For visualization, geemap would be used for a vsual representations of the biophysical attributes. "
+    "For visualization, geemap would be used for a visual representations of the biophysical attributes. "
    ]
   },
   {
@@ -27,7 +27,7 @@
     "1. Defining the geographical extent of the region to be analyzed.\n",
     "2. Acquiring relevant geospatial raster datasets for analysis\n",
     "3. Preprocessing the acquired datasets for analysis\n",
-    "4. Perfrming the landscape character assessment using advanced geospatial techniques, functions and tools\n",
+    "4. Performing the landscape character assessment using advanced geospatial techniques, functions and tools\n",
     "5. Visualizing and communicating the findings using a suitable python visualization library "
    ]
   },
@@ -159,12 +159,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ACQUIRNG THE DATA SETS FROM EARTH ENGINE'S API. THIS DATA SETS INCLUDES ( precipitation-evaporation index, Land Cover, Proximity to Water Bodies and CO2 Emissions)."
+    "ACQUIRNG THE DATA SETS FROM EARTH ENGINE'S API. THIS DATA SETS INCLUDES ( precipitation-Evapotranspiration  index and Land Cover)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b65e27491c3e4e12a8bd66caa855092a",
+       "model_id": "58258aba20c94669a582695849192a7e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,13 +212,13 @@
        "Map(center=[8.3463813, -1.2661157], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=Sea…"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Obtaining the precipitation-evaporation index of Ghana within the timeframe\n",
+    "#Obtaining the precipitation-evapotranspiration  index of Ghana within the timeframe\n",
     "\n",
     "# retrieving dataset from the SPEI database (Standardised Precipitation-Evapotranspiration Index database) on earth engine\n",
     "pre_eva = ee.ImageCollection(\"CSIC/SPEI/2_9\")\\\n",
@@ -246,12 +246,13 @@
     "\n",
     "\n",
     "# centering the map\n",
-    "center_map = geemap.Map(center = [8.3463813, -1.2661157] )\n",
+    "center_map = geemap.Map(center = [8.3463813, -1.2661157], zoom= 6 )\n",
     "\n",
     "\n",
     "# lets visualize the map of Ghana\n",
     "center_map.add_layer(ghana, {}, 'Ghana demarcation')\n",
-    "center_map.add_layer(analysis, visParams, 'SPEI_12_MONTHS')\n",
+    "spei_layer = \"SPEI_12_MONTHS\"\n",
+    "center_map.add_layer(analysis, visParams, spei_layer)\n",
     "\n",
     "center_map"
    ]
@@ -269,13 +270,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Obtaining and analysing land cover datasets     "
-   ]
   },
   {
    "cell_type": "code",
@@ -315,11 +309,137 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Saving the map as an html file Can be viewd by pasting link in a web browser  \n",
+    "\n",
+    "out_html = \"centre_map.html\"\n",
+    "\n",
+    "center_map.to_html(out_html)\n",
+    "\n",
+    "\n",
+    "link_to_view_map = \"file:///C:/Users/acer/Documents/GIS%20Projects/landscape_character_assessment/centre_map.html\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analysing the datasets of the precipitation-evapotranspiration index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# calculating the spei index is (spei = precipitation.subtract(pet).divide(precipitation).reduce(ee.Reducer.mean()))\n",
+    "\n",
+    "precipitation = analysis.select('Precipitaion')\n",
+    "\n",
+    "# potential evapotranspiration data \n",
+    "transpiration = analysis.select('PET')\n",
+    "\n",
+    "\n",
+    "# spei = precipitation.subtract(transpiration).divide(precipitation).reduce(ee.Reducer.mean())\n",
+    "\n",
+    "# spei.get_info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Obtaining and analysing land cover datasets     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f908ef35e63405da9f6cf3321374695",
+       "model_id": "98188bf386b64a4e88550ba4a83dc2e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,7 +447,7 @@
        "Map(center=[8.3463813, -1.2661157], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=Sea…"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +497,7 @@
     "}\n",
     "\n",
     "\n",
-    "lc_map = geemap.Map(center = [8.3463813, -1.2661157])\n",
+    "lc_map = geemap.Map(center = [8.3463813, -1.2661157], zoom= 6)\n",
     "\n",
     "lc_map.add_layer(ghana, {}, 'Ghana')\n",
     "lc_map.add_layer(composite, visualization, 'Landsat')\n",
@@ -387,14 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -433,19 +546,13 @@
     }
    ],
    "source": [
-    "# Analysing the datasets of the precipitation-evaporation index\n",
+    "# Saving the map as an html file. Can be viewd by pasting link in a web browser \n",
     "\n",
-    "# calculating the spe index is (spei = precipitation.subtract(pet).divide(precipitation).reduce(ee.Reducer.mean()))\n",
+    "output_html = \"lc_map.html\"\n",
     "\n",
-    "precipitation = analysis.select('Precipitaion')\n",
+    "lc_map.to_html(output_html)\n",
     "\n",
-    "# potential evapotranspiration data \n",
-    "transpiration = analysis.select('PET')\n",
-    "\n",
-    "\n",
-    "# spei = precipitation.subtract(transpiration).divide(precipitation).reduce(ee.Reducer.mean())\n",
-    "\n",
-    "# spei.get_info()"
+    "view_map = \"file:///C:/Users/acer/Documents/GIS%20Projects/landscape_character_assessment/lc_map.html\""
    ]
   },
   {
@@ -459,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +606,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f47c91606bff44ae8c8638dd43463996",
+       "model_id": "44f5f235a6614468b8489be45df0e036",
        "version_major": 2,
        "version_minor": 0
       },
@@ -507,7 +614,7 @@
        "Map(center=[0, 0], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=SearchDataGUI(childr…"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +649,6 @@
     "\n",
     "\n",
     "# Visualizing the NDVI image\n",
-    "\n",
     "visparameters = {\n",
     "    'min': -1,\n",
     "    'max': 1,\n",
@@ -552,10 +658,9 @@
     "}\n",
     "\n",
     "\n",
-    "# setting legend parameters\n",
-    "\n",
+    "# setting a legend\n",
     "legend_dict = {\n",
-    "    '<1' : '#e5f5f9',\n",
+    "    '<0.1' : '#e5f5f9',\n",
     "    '>= 0.2 and <= 0.3' : '#feb24c',\n",
     "    '>= 0.6 and <= 0.8' : '#31a354'\n",
     "\n",
@@ -565,7 +670,9 @@
     "# get the median of the image collection\n",
     "median = l8_ndvi.median()\n",
     "\n",
-    "ndvi_map = geemap.Map()\n",
+    "# plotiing the map\n",
+    "ndvi_map = geemap.Map(zoom= 5)\n",
+    "\n",
     "ndvi_map.add_layer(ghana, {}, 'Ghana')\n",
     "ndvi_map.add_layer(median, visparameters, 'Vegetation Map')\n",
     "ndvi_map.add_legend(title= 'NDVI Legend', legend_dict= legend_dict, position='bottomright', draggable=True)\n",
@@ -584,10 +691,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Saving the map as an html file. Can be viewd by pasting link in a web browser \n",
+    "output_map = \"ndvi_map.html\"\n",
+    "\n",
+    "ndvi_map.to_html(output_map)\n",
+    "\n",
+    "map_link = \"file:///C:/Users/acer/Documents/GIS%20Projects/landscape_character_assessment/ndvi_map.html\""
+   ]
   },
   {
    "cell_type": "code",
