--- a/landscape_character_assessment/landscape_character_assesment.ipynb
+++ b/landscape_character_assessment/landscape_character_assesment.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58258aba20c94669a582695849192a7e",
+       "model_id": "d4f3f8cc6c874eebb917313f9cf66c9b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,7 +212,7 @@
        "Map(center=[8.3463813, -1.2661157], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=Sea…"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,18 +250,11 @@
     "\n",
     "\n",
     "# lets visualize the map of Ghana\n",
-    "center_map.add_layer(ghana, {}, 'Ghana demarcation')\n",
     "spei_layer = \"SPEI_12_MONTHS\"\n",
     "center_map.add_layer(analysis, visParams, spei_layer)\n",
+    "center_map.add_layer(ghana, {'color': 'black'}, 'Ghana demarcation')\n",
     "\n",
     "center_map"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The blue color at the south-western part of Ghana indicates a good spei index as it is the forest belt of Ghana endowed with many trees and tropical rain forests. However, the northern part of the country known as the Savannah belt is dry with litle to no less rain, indicating a poor spei index. "
    ]
   },
   {
@@ -330,8 +323,111 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SPEI VALUES\n",
+    "\n",
+    "2.0+ = extremely wet      <>      1.5 to 1.99= very wet    <>  1.0 to 1.49 =moderately wet   <>  -.99 to .99 =near normal    <>\n",
+    "-1.0 to -1.49 = moderately dry    <>    -1.5 to -1.99 = severely dry     <>   -2 and less= extremely dry"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5e625f8f68b240b1b4269d574ff67bb0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[8.3463813, -1.2661157], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=Sea…"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "threshold = -2\n",
+    "\n",
+    "# Filter SPEI data to show only values above the threshold\n",
+    "spei_filtered = gh_spei.map(lambda img: img.updateMask(img.gt(threshold)))\n",
+    "\n",
+    "\n",
+    "# setting a legend \n",
+    "legend_info = {\n",
+    "    '>2.0' : '#00008b',\n",
+    "    '1.5 to 1.99' : '#1771de',\n",
+    "    '1.0 to 1.49' : '#12adf3',\n",
+    "    '-.99 to .99' : '#9afa94',\n",
+    "    '-1.0 to -1.49': '#f3641d',\n",
+    "    '-1.5 to -1.99' : '#de2929',\n",
+    "    '< -2' : '#8b1a1a'\n",
+    "} \n",
+    "\n",
+    "\n",
+    "# Display the filtered SPEI data\n",
+    "spei_analysis = geemap.Map(center = [8.3463813, -1.2661157], zoom= 6)\n",
+    "\n",
+    "spei_analysis.addLayer(spei_filtered, visParams, 'Filtered SPEI 12 month Analysis')\n",
+    "spei_analysis.addLayer(ghana, {'color': 'black'}, 'ROI')\n",
+    "spei_analysis.add_legend(title= 'SPEI Value Legend', legend_dict= legend_info, position='topright', draggable=True)\n",
+    "\n",
+    "spei_analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "INTERPRETATION\n",
+    "\n",
+    "The blue color at the south-western part of Ghana indicates moderately wet as it is the forest belt of Ghana endowed with many trees and tropical rain forests. However, the orange and yellow traces at the northern part of the country known as the Savannah belt is moderately dry and relatively hot with litle to no rain, indicating a negative spei index."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -370,25 +466,14 @@
     }
    ],
    "source": [
-    "# calculating the spei index is (spei = precipitation.subtract(pet).divide(precipitation).reduce(ee.Reducer.mean()))\n",
+    "# Saving the map as an html file. Can be viewd by pasting link in a web browser \n",
     "\n",
-    "precipitation = analysis.select('Precipitaion')\n",
+    "saving_map = \"spei_analysis.html\"\n",
     "\n",
-    "# potential evapotranspiration data \n",
-    "transpiration = analysis.select('PET')\n",
+    "spei_analysis.to_html(saving_map)\n",
     "\n",
-    "\n",
-    "# spei = precipitation.subtract(transpiration).divide(precipitation).reduce(ee.Reducer.mean())\n",
-    "\n",
-    "# spei.get_info()"
+    "link = \"\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
