--- a/landscape_character_assessment/landscape_character_assesment.ipynb
+++ b/landscape_character_assessment/landscape_character_assesment.ipynb
@@ -55,9 +55,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "            <style>\n",
+       "                .geemap-dark {\n",
+       "                    --jp-widgets-color: white;\n",
+       "                    --jp-widgets-label-color: white;\n",
+       "                    --jp-ui-font-color1: white;\n",
+       "                    --jp-layout-color2: #454545;\n",
+       "                    background-color: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-dark .jupyter-button {\n",
+       "                    --jp-layout-color3: #383838;\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab {\n",
+       "                    background-color: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "\n",
+       "                .geemap-colab .jupyter-button {\n",
+       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
+       "                }\n",
+       "            </style>\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# import necessary libraries to be used\n",
     "\n",
@@ -67,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +239,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4f3f8cc6c874eebb917313f9cf66c9b",
+       "model_id": "1147c0113b144d4c91496f85ff78f88d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -212,7 +247,7 @@
        "Map(center=[8.3463813, -1.2661157], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=Sea…"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +409,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e625f8f68b240b1b4269d574ff67bb0",
+       "model_id": "d17bac2f5ba84055bd0db8eb43de60cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -382,7 +417,7 @@
        "Map(center=[8.3463813, -1.2661157], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=Sea…"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +446,7 @@
     "\n",
     "spei_analysis.addLayer(spei_filtered, visParams, 'Filtered SPEI 12 month Analysis')\n",
     "spei_analysis.addLayer(ghana, {'color': 'black'}, 'ROI')\n",
-    "spei_analysis.add_legend(title= 'SPEI Value Legend', legend_dict= legend_info, position='topright', draggable=True)\n",
+    "spei_analysis.add_legend(title= 'SPEI Value Legend', legend_dict= legend_info, position='topright', draggable=True, in_place =True)\n",
     "\n",
     "spei_analysis"
    ]
@@ -427,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +507,8 @@
     "\n",
     "spei_analysis.to_html(saving_map)\n",
     "\n",
-    "link = \"\""
+    "# link to view map\n",
+    "link = \"file:///C:/Users/acer/Documents/GIS%20Projects/landscape_character_assessment/spei_analysis.html\""
    ]
   },
   {
@@ -484,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +560,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98188bf386b64a4e88550ba4a83dc2e6",
+       "model_id": "626edfa863d24a27a32934acac3c32fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -532,7 +568,7 @@
        "Map(center=[8.3463813, -1.2661157], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=Sea…"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +687,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Formula for calculating vegetation types using NDVI is;  NDVI = (Band 5 - Band 4) / (Band 5 + Band 4) \n",
+    "\n",
+    "\n",
+    "NDVI = (NIR + Red) / (NIR−Red)  Where NIR (Near -Infrared Radiation) is Band 5  and Red is band 4\n",
+    "\n",
+    "NB :: Very low values of NDVI (0.1 and below) correspond to barren areas of rock, sand, or snow. \n",
+    "Moderate values represent shrub and grassland (0.2 to 0.3), while high values indicate temperate and tropical rainforests (0.6 to 0.8).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +747,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44f5f235a6614468b8489be45df0e036",
+       "model_id": "02ce649ed2fe4daba7099ca2ff095fa0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -699,23 +755,12 @@
        "Map(center=[0, 0], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=SearchDataGUI(childr…"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Formula for calculating vegetation types using NDVI is ; \n",
-    "\n",
-    "# NDVI = (Band 5 - Band 4) / (Band 5 + Band 4)   \n",
-    "# OR\n",
-    "#NDVI = (NIR + Red) / (NIR−Red)  Where NIR (Near -Infrared Radiation) is Band 5  and Red is band 4\n",
-    "\n",
-    "# NB :: Very low values of NDVI (0.1 and below) correspond to barren areas of rock, sand, or snow. \n",
-    "# Moderate values represent shrub and grassland (0.2 to 0.3), while high values indicate temperate and tropical rainforests (0.6 to 0.8).\n",
-    "\n",
-    "\n",
-    "\n",
     "# creating a function to calculate NDVI\n",
     "\n",
     "def ndvi(image):\n",
@@ -771,12 +816,12 @@
    "metadata": {},
    "source": [
     "From the map displayed above, within a span of a year, the green areas show dense vegatation or land cover. This is mostly seen at the western, southern and Eastern parts of Ghana. However, the northern part records a medium vegetation cover due to it's location, high amount of solar heat and less rain in this region. Ghana is located in the tropical forest region hence, vegetation grows all year round, which is a reason for no white color\n",
-    "trcaes in the map."
+    "traces in the map."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
